fix profile img overflow problem

--- a/app/assets/stylesheets/couples.css.scss
+++ b/app/assets/stylesheets/couples.css.scss
@@ -35,8 +35,7 @@
 
 
 .user-profile-img{
-  width: 240px;
-  height: 40%;
+  width: 210px;
   border: dotted #fff 1px;
   border-radius: 3px;
   margin-bottom: 10px;
